--- a/main.html
+++ b/main.html
@@ -4,10 +4,103 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	 <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .form-container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+        }
+        .form-container h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+            text-align: center;
+            color: #333;
+        }
+        .form-container label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+            color: #555;
+        }
+        .form-container input,
+        .form-container select,
+        .form-container button {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 14px;
+        }
+        .form-container button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        .form-container button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+	 <div class="form-container">
+        <h1>Car Insurance Registration</h1>
+        <form method="POST">
+            <!-- Name Field -->
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="Enter your name" required>
+
+            <!-- Email Field -->
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+            <!-- Gender Radio Buttons -->
+            <label>Gender</label>
+            <label><input type="radio" name="gender" value="male" required> Male</label>
+            <label><input type="radio" name="gender" value="female" required> Female</label>
+
+            <!-- Car Brands Dropdown -->
+            <label for="cars">Car Brands</label>
+            <select id="cars" name="cars">
+                <option value="">Select a car brand</option>
+                <option value="bmw">BMW</option>
+                <option value="audi">Audi</option>
+                <option value="mercedez">Mercedez</option>
+            </select>
+
+            <!-- Car Age Field -->
+            <label for="carage">Car Age</label>
+            <input type="number" id="carage" name="carage" placeholder="Enter car age" required>
+
+            <!-- Date of Purchase Field -->
+            <label for="dop">Date of Purchase</label>
+            <input type="date" id="dop" name="dop" required>
+
+            <!-- Password Field -->
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" placeholder="Enter your password" required>
+
+            <!-- Submit Button -->
+            <button type="submit">Submit</button>
+        </form>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
